@@ -23,7 +23,7 @@ override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include \
 SHLIB_LINK += -lm
 
 OBJS= numeric.o datetime.o common.o dt_common.o timestamp.o interval.o \
-      $(filter rint.o, $(LIBOBJS))
+      $(filter rint.o, $(LIBOBJS)) $(filter pgstrcasecmp.o, $(LIBOBJS))
 
 all: all-lib
 
@@ -31,6 +31,9 @@ all: all-lib
 include $(top_srcdir)/src/Makefile.shlib
 
 rint.c: %.c : $(top_srcdir)/src/port/%.c
+	rm -f $@ && $(LN_S) $< .
+
+pgstrcasecmp.c: %.c : $(top_srcdir)/src/port/%.c
 	rm -f $@ && $(LN_S) $< .
 
 install: all installdirs install-lib
